# ARC_2025

./: README.md  run_edge_assist_docker.bash
Code_base/Localization_and_Alignment/catkin_ws/: Anchor_based_Direct_Alignment.sh  Calculate_Vehicle_to_Leader_GT_Transforms.py  ReadMe.txt  V2V_E2E_Direct_Error.sh  V2V_E2E_Lead_Error.sh  Vehicle_Localization.sh  Vehicle_to_Leader_Ground_Truth.sh  Vehicle_to_Vehicle_GT.sh
Code_base/Localization_and_Alignment/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh
Code_base/Localization_and_Alignment/catkin_ws/src/eaad/: CMakeLists.txt  package.xml
Code_base/Localization_and_Alignment/catkin_ws/src/eaad/src/pc_publisher/src/: Diff_PCD_KDTree.cpp  Fast_global_registration.py  Pcd_croper.cpp  downsample.py  merge.cpp  pcd_to_pointcloud2_pub.cpp  point_cloud_publisher.cpp  vvr_ndt.cpp
Code_base/Localization_and_Alignment/catkin_ws/src/fast_gicp/: CMakeLists.txt
Code_base/Localization_and_Alignment/catkin_ws/src/fast_gicp/data/: infra_static.pcd
Code_base/Localization_and_Alignment/catkin_ws/src/fast_gicp/data/Vehicle/Vehicle/: 0.pcd  1.pcd  10.pcd  100.pcd  101.pcd  102.pcd  103.pcd  104.pcd  105.pcd  106.pcd  107.pcd  108.pcd  109.pcd  11.pcd  110.pcd  111.pcd  112.pcd  113.pcd  114.pcd  115.pcd  116.pcd  117.pcd  118.pcd  119.pcd  12.pcd  120.pcd  121.pcd  122.pcd  123.pcd  124.pcd  125.pcd  126.pcd  127.pcd  128.pcd  129.pcd  13.pcd  130.pcd  131.pcd  132.pcd  133.pcd  (+261 more)
Code_base/Localization_and_Alignment/catkin_ws/src/fast_gicp/src/: Final.cpp  Initial_frame_align.cpp  align_CUDA_GICP.cpp  align_CUDA_GICP_Vehicle_Vehicle_with_Script.cpp  align_CUDA_NDT_R2V.cpp  fusion_pipeline_1.cpp  fusion_pipeline_5.cpp  receive_infra_raw.cpp  vehicle_fusion_icp.cpp  vehicle_localization_pipeline_1.cpp
Code_base/Overlap_Extraction/: CMakeCache.txt  Finding_Overlap.cu  Latency_Comparisons.py  Makefile  Overlap_extraction.sh  cmake_install.cmake
Code_base/Results/Network_Results/: Meta_Data_Sharing.txt  point_cloud_sizes.txt
Code_base/Scripts_and_Plots/Accuracy/: Plot.py  Remove_Redundancy.py
Code_base/Scripts_and_Plots/Latencies/: Anchor_Alignment_Latencies.py  Consumer_Latency.py  Localization.py  Overlap_Latencies.py  Plot_Latencies.py  Publisher_Assignment_Latency.py  Publisher_Latencies.py
Code_base/Scripts_and_Plots/Network/: Combined_Plot.py  Publisher_Sizes.py  Subscriber_Sizes.py
Code_base/Vehicle_Communication/: .CUDA_InterPoint_Density.cu.swp  CMakeCache.txt  CMakeLists.txt  CUDA_Publisher  CUDA_Publisher_Assignment  CUDA_Subscriber  Makefile  Producer_Assignment.py  Producer_Assignment_Latencies.txt  Publisher.cu  Publisher_Assignment_test.sh  Publisher_test.sh  Rearranging_files.py  Subscriber.cu  Subscriber_Publisher_Assignment.cu  Subscriber_test.sh  cmake_install.cmake
Overlap_and_Communication/Overlap_Latest/: CMakeCache.txt  CMakeLists.txt  CUDA_Publisher  CUDA_Subscriber  Finding_Overlap  Makefile  Only_Non_Ground  Only_Non_Ground.cu  README.md  cmake_install.cmake  requirements.txt  test.sh
Overlap_and_Communication/Vehicle_Communication/: CMakeCache.txt  CMakeLists.txt  CUDA_Downsample  CUDA_InterPoint_Density_old.cu  CUDA_InterPoint_Density_old2.cu  CUDA_Publisher  CUDA_Publisher_Assignment  CUDA_Subscriber  Downsample.cu  Finding_Overlap_Subscriber.cu  InterPoint_Density.cpp  Makefile  Multi-object-Tracking.py  OMP_InterPoint_Density.cpp  Producer_Assignment_Latencies.txt  Publisher.cu  Publisher_Assignemnt_test.sh  Publisher_test.sh  Rearranging_files.py  Subscriber.cu  Subscriber_Publisher_Assignment.cu.cu  Subscriber_test.sh  cmake_install.cmake  test_Downsample.sh
catkin_ws/: ASP_Accuracy_Predictor.sh  IPD_Filter.py  metadata_2048x10.json  setup_env.bash
catkin_ws/Execution_Files/: ASP.py  Calculate_Transforms_Error.py  Combined_NDT_Direct_Erro.sh  Direct_ICP.sh  Direct_V_L_Error_Plot.py  E2E_Direct_Error.sh  E2E_NDT_Error.sh  IPD_Filter_GT_NDT.sh  Leader_Alignment_Latencies.py  NDT.sh  NDT_DT_Calculate_Transforms_Error.py  NDT_Error.sh  NDT_Latencies.py  Plot.py  V2V_E2E_Direct_Error.sh  V2V_E2E_Lead_Error.sh  V2V_GT.sh  V2V_Vehicle_and_Vehicle_calculate_V2V_transforms.py  V_L_Ground_Truth.sh  file.py
catkin_ws/devel/lib/fast_gicp/: V2V_fusion  Vehicle_Vehicle  cuda_ndt_align_R2V  infra_1  infra_2  infra_3  vehicle_1_ndt  vehicle_2_ndt  vehicle_fusion_1  vehicle_fusion_2  vehicle_fusion_3  vehicle_fusion_4  vehicle_fusion_5  vehicle_ndt_1  vehicle_ndt_5
catkin_ws/devel/lib/pkgconfig/: ouster_ros.pc
catkin_ws/devel/share/ouster_ros/cmake/: ouster_ros-msg-paths.cmake  ouster_rosConfig.cmake
catkin_ws/network_setup_car/: network_setup.bash  network_setup_3.bash  network_setup_4.bash  network_setup_5.bash
catkin_ws/network_setup_infra/: network_setup.bash  network_setup_2.bash  network_setup_3.bash  network_setup_4.bash  network_setup_5.bash  network_setup_6.bash
catkin_ws/src/Ouster/devel/: .catkin  setup.sh
catkin_ws/src/eaad/: CMakeLists.txt
catkin_ws/src/eaad/src/pc_publisher/src/: NDT.cpp  (+18 more)
catkin_ws/src/fast_gicp/: CMakeLists.txt
catkin_ws/src/fast_gicp/data/: init.txt
catkin_ws/src/fast_gicp/src/: Infra_Vehicle_align.cpp  V2V_fusion.cpp  align_CUDA_GICP_Vehicle_Vehicle_with_Script.cpp  align_CUDA_NDT.cpp  align_CUDA_NDT_R2V.cpp  decode.cpp  infra.cpp  infra_1.cpp  infra_2.cpp  infra_3.cpp  infra_fawad.cpp  infra_raw.cpp  infra_test.cpp  vehicle_1_ndt.cpp  vehicle_2_ndt.cpp  vehicle_fusion.cpp  vehicle_fusion_2.cpp  vehicle_fusion_2_previous.cpp  vehicle_fusion_3.cpp  vehicle_fusion_4.cpp  vehicle_fusion_copy  vehicle_fusion_final.cpp  vehicle_fusion_icp_ndt.cpp  vehicle_fusion_test.cpp  vehicle_ndt.cpp  vehicle_ndt_1.cpp  vehicle_ndt_5.cpp
catkin_ws/src/ndt_omp/: CMakeLists.txt
catkin_ws/src/ndt_omp/apps/: Infr-vehicle_files_association.cpp  Multiple_NDTs_align_direct_map_vehicle.cpp  NDT_align_direct_map_vehicle.cpp  NDT_align_direct_single_infra_vehicle.cpp  Signle_Infra_Mul_Veh_Direct_GICP.cpp  align.cpp  align_kaleem.cpp  align_test.cpp  ndt_fawad.cpp  runtime_stats.py
catkin_ws/src/ndt_omp/data/: core
catkin_ws/src/ndt_omp/include/pclomp/: gicp_omp.h  ndt_omp.h
(+69 files in other folders)
